--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://*.google.com/*"],
       "js": ["content.js"]
     }
   ]
